# guard_exception

./: LICENSE  README.md  pyproject.toml
guard_exception/: __init__.py  main.py
